Add Jsoup dependency and enhance RssFetcher for XML error handling and redirect support