@@ -4,12 +4,37 @@ import com.rometools.rome.feed.synd.SyndEntry;
 import com.rometools.rome.feed.synd.SyndFeed;
 import com.rometools.rome.io.SyndFeedInput;
 import com.rometools.rome.io.XmlReader;
+import org.jsoup.Jsoup;
+import org.jsoup.nodes.Document;
+import org.jsoup.nodes.Entities;
 
-import java.net.URL;
+import java.io.ByteArrayInputStream;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.List;
 
 public class RssFetcher {
+    /**
+     * Fixes common XML errors in RSS feeds using Jsoup and removes control characters.
+     */
+    private static String fixXml(String xml) {
+        // Remove all control characters except tab (\t), newline (\n), and carriage return (\r)
+        xml = xml.replaceAll("[\\u0000-\\u0008\\u000B\\u000C\\u000E-\\u001F\\u007F]", "");
+
+        // Ensure XML declaration is present
+        if (!xml.trim().startsWith("<?xml")) {
+            xml = "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" + xml;
+        }
+
+        // Clean with Jsoup
+        Document doc = Jsoup.parse(xml, "", org.jsoup.parser.Parser.xmlParser());
+        doc.outputSettings().syntax(Document.OutputSettings.Syntax.xml);
+        doc.outputSettings().escapeMode(Entities.EscapeMode.xhtml);
+        return doc.outerHtml();
+    }
+
     /**
      * Fetches and parses an RSS/Atom feed from the given URL.
      *
@@ -19,11 +44,41 @@ public class RssFetcher {
      */
     public static List<SyndEntry> fetch(String feedUrl) throws Exception {
         List<SyndEntry> entries = new ArrayList<>();
-        try (XmlReader reader = new XmlReader(new URL(feedUrl))) {
+        String xmlContent;
+        // Use HttpURLConnection to follow redirects and check content type
+        java.net.HttpURLConnection conn = (java.net.HttpURLConnection) URI.create(feedUrl).toURL().openConnection();
+        conn.setInstanceFollowRedirects(true);
+        conn.setRequestProperty("User-Agent", "FeedoraBot/1.0");
+        int status = conn.getResponseCode();
+        // Follow up to 5 redirects manually if needed
+        int redirects = 0;
+        while ((status == 301 || status == 302 || status == 303 || status == 307 || status == 308) && redirects < 5) {
+            String newUrl = conn.getHeaderField("Location");
+            if (newUrl == null) break;
+            conn = (java.net.HttpURLConnection) URI.create(newUrl).toURL().openConnection();
+            conn.setInstanceFollowRedirects(true);
+            conn.setRequestProperty("User-Agent", "FeedoraBot/1.0");
+            status = conn.getResponseCode();
+            redirects++;
+        }
+        String contentType = conn.getContentType();
+        try (InputStream is = conn.getInputStream()) {
+            xmlContent = new String(is.readAllBytes(), StandardCharsets.UTF_8);
+        }
+        // Check if content is likely XML
+        String xmlStart = xmlContent.trim().substring(0, Math.min(100, xmlContent.trim().length())).toLowerCase();
+        if ((contentType != null && contentType.contains("html")) || xmlStart.startsWith("<html") || xmlStart.contains("<html")) {
+            System.err.println("Feed URL returned HTML, not XML: " + feedUrl);
+            return entries; // Return empty list
+        }
+        String fixedXml = fixXml(xmlContent);
+        try (XmlReader reader = new XmlReader(new ByteArrayInputStream(fixedXml.getBytes(StandardCharsets.UTF_8)))) {
             SyndFeed feed = new SyndFeedInput().build(reader);
             entries.addAll(feed.getEntries());
         } catch (Exception e) {
-            // Do not log here, just rethrow
+            // Log a snippet of the problematic XML for debugging
+            System.err.println("Error parsing feed: " + feedUrl + " - " + e.getMessage());
+            System.err.println("XML snippet: " + fixedXml.substring(0, Math.min(1000, fixedXml.length())));
             throw e;
         }
         return entries;
